# cdi

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
shell/: cdi.fish  cdi.ps1  cdi.zsh
src/: lib.rs  main.rs
tests/: integration.rs
